# Enterprise-LLMOps-AI-governance-platform

./: .env.example  .env.ollama.example  .gitignore  Dockerfile  GITHUB_UPLOAD_COMMANDS.md  LICENSE  Makefile  README.md  RUN_COMMANDS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/sample/: README.md  attack_test_cases.csv  eval_manifest.json  eval_questions.csv  sample_model_responses.csv  sample_retrieval_contexts.csv  synthetic_prompts.csv
docs/: api_reference.md  architecture.md  ci_cd_gates.md  evaluation_methodology.md  governance_framework.md  workflow.md
docs/screenshots/: README.md
knowledge_base/policies/: ai_usage_policy.md  customer_support_policy.md  data_retention_policy.md  incident_response_policy.md  privacy_policy.md  refund_policy.md  vendor_risk_policy.md
reports/sample/: audit_log.jsonl  latest_gate_result.json  latest_run.json  model_card.md  model_comparison.csv  risk_register.csv
scripts/: run_api.ps1  run_dashboard.ps1  run_offline_validation.ps1  setup_windows.ps1
src/enterprise_llmops_ai_governance_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/llmops_governance/: __init__.py  utils.py
src/llmops_governance/api/: main.py
src/llmops_governance/cli/: __main__.py  main.py
tests/: test_api.py  test_cli_gates.py  test_governance_readiness.py  test_pii_secrets.py  test_prompt_injection.py  test_provider_fallback.py  test_rag_evaluator.py  test_reports.py  test_retrieval.py  test_scoring.py
(+43 files in other folders)
